--- a/index.html
+++ b/index.html
@@ -214,7 +214,8 @@
       </div>
     </div>
     <footer>
-        &copy; 2021<span> Leon </span> All Right Reserved
+        &copy; <span> Leon </span> All Right Reserved
     </footer>
+    <script src="scripts.js"></script>
   </body>
 </html>
