--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <title>Leon | Template One</title>
   </head>
   <body>
+    <div class="progress-page"></div>
     <header>
       <div class="container">
         <img src="images/logo.png" alt="logo" class="logo" />
@@ -203,19 +204,20 @@
         <div class="contact-content">
           <div class="info">
             <p class="label">Feel free to drop us a line at:</p>
-            <a href="mailto:leonagency@mail.com?subject=Leon" class="link">leonagency@mail.com</a>
-            <div class="social">Find Us On Social Networks
+            <a href="mailto:leonagency@mail.com?subject=Leon" class="link"
+              >leonagency@mail.com</a
+            >
+            <div class="social">
+              Find Us On Social Networks
               <i class="fab fa-youtube"></i>
               <i class="fab fa-facebook-f"></i>
               <i class="fab fa-twitter"></i>
-          </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-    <footer>
-        &copy; <span> Leon </span> All Right Reserved
-    </footer>
-    <script src="scripts.js"></script>
+    <footer>&copy; <span> Leon </span> All Right Reserved</footer>
+    <script src="script.js"></script>
   </body>
 </html>
